打印配置可修改 前17位条码不能重复

--- a/app.config
+++ b/app.config
@@ -9,6 +9,7 @@
   </startup>
 
   <appSettings>
+    <add key="device" value="1" />
     <!-- Set db initializer -->
     <add key="DatabaseInitializerForType CSApp.DataModelContext, CSApp" value="CSApp.DataModelInitializer, CSApp" />
   </appSettings>
