--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net40" />
+  <package id="NPOI" version="2.3.0" targetFramework="net40" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
